--- a/features/draft/spec/css-images-4.yml.dist
+++ b/features/draft/spec/css-images-4.yml.dist
@@ -3,8 +3,4 @@
 
 status:
   baseline: false
-  support:
-    firefox: "36"
-    firefox_android: "36"
-compat_features:
-  - css.properties.object-position.applies_to_iframe_elements
+  support: {}
