--- a/features/draft/spec/permissions.yml.dist
+++ b/features/draft/spec/permissions.yml.dist
@@ -45,6 +45,19 @@ compat_features:
   - api.Permissions.permission_notifications
 
   # baseline: low
+  # baseline_low_date: 2024-10-29
+  # support:
+  #   chrome: "64"
+  #   chrome_android: "64"
+  #   edge: "79"
+  #   firefox: "132"
+  #   firefox_android: "132"
+  #   safari: "16"
+  #   safari_ios: "16"
+  - api.Permissions.permission_camera
+  - api.Permissions.permission_microphone
+
+  # baseline: low
   # baseline_low_date: 2024-11-26
   # support:
   #   chrome: "43"
@@ -55,16 +68,6 @@ compat_features:
   #   safari: "16.4"
   #   safari_ios: "16.4"
   - api.WorkerNavigator.permissions
-
-  # baseline: false
-  # support:
-  #   chrome: "64"
-  #   chrome_android: "64"
-  #   edge: "79"
-  #   safari: "16"
-  #   safari_ios: "16"
-  - api.Permissions.permission_camera
-  - api.Permissions.permission_microphone
 
   # baseline: false
   # support:
