--- a/features/fieldset.yml.dist
+++ b/features/fieldset.yml.dist
@@ -136,10 +136,13 @@ compat_features:
   #   safari_ios: "13"
   - api.HTMLFieldSetElement.elements.type_HTMLCollection
 
-  # baseline: false
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
   # support:
   #   chrome: "20"
   #   chrome_android: "25"
+  #   edge: "79"
   #   firefox: "4"
   #   firefox_android: "4"
   #   safari: "6"
