--- a/features/svg-filters.yml.dist
+++ b/features/svg-filters.yml.dist
@@ -362,6 +362,20 @@ compat_features:
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "79"
+  #   firefox: "3"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: "2"
+  - css.properties.color-interpolation-filters
+  - css.properties.color-interpolation-filters.auto
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
   #   chrome: "5"
   #   chrome_android: "18"
   #   edge: "79"
@@ -453,6 +467,20 @@ compat_features:
   # baseline_low_date: 2020-01-15
   # baseline_high_date: 2022-07-15
   # support:
+  #   chrome: "28"
+  #   chrome_android: "28"
+  #   edge: "79"
+  #   firefox: "22"
+  #   firefox_android: "22"
+  #   safari: "9"
+  #   safari_ios: "9"
+  - css.properties.color-interpolation-filters.linearRGB
+  - css.properties.color-interpolation-filters.sRGB
+
+  # baseline: high
+  # baseline_low_date: 2020-01-15
+  # baseline_high_date: 2022-07-15
+  # support:
   #   chrome: ≤53
   #   chrome_android: ≤53
   #   edge: "79"
@@ -477,34 +505,6 @@ compat_features:
   - svg.elements.feComposite.k2
   - svg.elements.feComposite.k3
   - svg.elements.feComposite.k4
-
-  # baseline: high
-  # baseline_low_date: ≤2020-07-28
-  # baseline_high_date: ≤2023-01-28
-  # support:
-  #   chrome: ≤80
-  #   chrome_android: ≤80
-  #   edge: ≤80
-  #   firefox: ≤72
-  #   firefox_android: ≤79
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - css.properties.color-interpolation-filters
-
-  # baseline: high
-  # baseline_low_date: ≤2020-07-28
-  # baseline_high_date: ≤2023-01-28
-  # support:
-  #   chrome: ≤83
-  #   chrome_android: ≤83
-  #   edge: ≤83
-  #   firefox: ≤72
-  #   firefox_android: ≤79
-  #   safari: ≤13.1
-  #   safari_ios: ≤13.4
-  - css.properties.color-interpolation-filters.auto
-  - css.properties.color-interpolation-filters.linearRGB
-  - css.properties.color-interpolation-filters.sRGB
 
   # baseline: high
   # baseline_low_date: 2021-02-23
