--- a/features/transforms2d.yml.dist
+++ b/features/transforms2d.yml.dist
@@ -9,8 +9,8 @@ status:
     chrome: "36"
     chrome_android: "36"
     edge: "12"
-    firefox: ≤16
-    firefox_android: ≤16
+    firefox: "16"
+    firefox_android: "16"
     safari: "9"
     safari_ios: "9"
 compat_features:
@@ -103,23 +103,11 @@ compat_features:
   #   chrome: "36"
   #   chrome_android: "36"
   #   edge: "12"
-  #   firefox: ≤16
-  #   firefox_android: ≤16
-  #   safari: "9"
-  #   safari_ios: "9"
-  - css.properties.transform
-
-  # baseline: high
-  # baseline_low_date: 2015-09-30
-  # baseline_high_date: 2018-03-30
-  # support:
-  #   chrome: "36"
-  #   chrome_android: "36"
-  #   edge: "12"
   #   firefox: "16"
   #   firefox_android: "16"
   #   safari: "9"
   #   safari_ios: "9"
+  - css.properties.transform
   - css.properties.transform-origin
   - css.properties.transform-origin.three_value_syntax
 
