Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/logical-assignments.yml
+++ b/features/logical-assignments.yml
@@ -1,5 +1,5 @@
 name: Logical assignments
-description: The logical AND assignment (&&=) and the logical OR assignment (||=) operators short-circuit the respective binary logical operators.
+description: The logical AND assignment (`&&=`) and the logical OR assignment (`||=`) operators short-circuit the respective binary logical operators.
 spec: https://tc39.es/ecma262/multipage/ecmascript-language-expressions.html#sec-assignment-operators
 group: javascript
 compat_features:
