--- a/features/numeric-seperators.yml
+++ b/features/numeric-seperators.yml
@@ -1,5 +1,5 @@
 name: Numeric separators
-description: "To improve readability for numeric literals, underscores (`_`) can be used as separators. For example: `1_050.95`"
+description: To improve readability for numeric literals, underscores (`_`) can be used as separators. For example, `1_050.95` is equivalent to `1050.95`.
 spec: https://tc39.es/ecma262/multipage/ecmascript-language-lexical-grammar.html#prod-NumericLiteralSeparator
 group: javascript
 compat_features:
