--- a/features/ambient-light.yml
+++ b/features/ambient-light.yml
@@ -9,3 +9,16 @@ compat_features:
   - api.Permissions.permission_ambient-light-sensor
   - html.elements.iframe.allow.ambient-light-sensor
   - http.headers.Permissions-Policy.ambient-light-sensor
+# Enable when overlapping keys are allowed, https://github.com/web-platform-dx/web-features/issues/1173
+#  - api.Sensor
+#  - api.Sensor.activate_event
+#  - api.Sensor.activated
+#  - api.Sensor.error_event
+#  - api.Sensor.hasReading
+#  - api.Sensor.reading_event
+#  - api.Sensor.start
+#  - api.Sensor.stop
+#  - api.Sensor.timestamp
+#  - api.SensorErrorEvent
+#  - api.SensorErrorEvent.SensorErrorEvent
+#  - api.SensorErrorEvent.error
