Apply suggestions from code review
Co-authored-by: Daniel D. Beck <daniel@ddbeck.com>

--- a/features/gamepad-extensions.yml
+++ b/features/gamepad-extensions.yml
@@ -1,5 +1,5 @@
 name: Gamepad extensions
-description: The `gamepad.hand` and `gamepad.pose` properties of the Gamepad API represent the position in space and the hand that WebXR controllers are being held in.
+description: The `hand` and `pose` properties of a `Gamepad` object represent the position in space and the hand that WebXR controllers are held in.
 spec: https://w3c.github.io/gamepad/extensions.html
 group: gamepad
 status:
