--- a/features/gamepad.yml
+++ b/features/gamepad.yml
@@ -1,5 +1,5 @@
 name: Gamepad
-description: The Gamepad API accesses and responds to signals from game controllers in web pages.
+description: The `Gamepad` API accesses and responds to signals from game controllers.
 spec: https://w3c.github.io/gamepad/
 caniuse: gamepad
 group: gamepad
