--- a/features/container-queries.yml
+++ b/features/container-queries.yml
@@ -1,6 +1,6 @@
 name: Container queries
 description: Container size queries with the `@container` at-rule apply styles to an element based on the dimensions of its container.
-spec: https://drafts.csswg.org/css-contain-3/#container-queries
+spec: https://drafts.csswg.org/css-conditional-5/#container-queries
 group: containment
 caniuse: css-container-queries
 status:
