Add container-queries group

--- a/features/container-style-queries.yml
+++ b/features/container-style-queries.yml
@@ -1,5 +1,5 @@
 name: Container style queries
 description: Container style queries with the `@container` at-rule apply styles to an element based on the values of custom properties of its container.
 spec: https://drafts.csswg.org/css-conditional-5/#style-container
-group: containment
+group: container-queries
 caniuse: css-container-queries-style
