--- a/features/container-queries.yml
+++ b/features/container-queries.yml
@@ -1,7 +1,7 @@
 name: Container queries
 description: Container size queries with the `@container` at-rule apply styles to an element based on the dimensions of its container.
 spec: https://drafts.csswg.org/css-conditional-5/#container-queries
-group: containment
+group: container-queries
 caniuse: css-container-queries
 status:
   compute_from: css.at-rules.container
