--- a/features/popover.yml
+++ b/features/popover.yml
@@ -8,6 +8,8 @@ group: html
 # References:
 # - https://github.com/mdn/browser-compat-data/issues/22927
 # - https://bugs.webkit.org/show_bug.cgi?id=267688
+status:
+  compute_from: api.HTMLElement.popover
 compat_features:
   - api.HTMLButtonElement.popoverTargetAction
   - api.HTMLButtonElement.popoverTargetElement
