Fix indexeddb name

--- a/features/indexeddb.yml
+++ b/features/indexeddb.yml
@@ -1,4 +1,4 @@
-mame: IndexedDB
+name: IndexedDB
 description: The IndexedDB API is a local storage transactional object database.
 spec: https://w3c.github.io/IndexedDB/
 caniuse:
