--- a/features/contenteditable.yml
+++ b/features/contenteditable.yml
@@ -1,9 +1,8 @@
 name: Contenteditable
-description: The `contenteditable` attribute represents whether the element should be editable by the user. If so, the browser modifies its widget to allow editing.
+description: The `contenteditable` attribute allows the user to edit the content of an element, for example by inserting or deleting text.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#contenteditable
 caniuse: contenteditable
 compat_features:
   - api.HTMLElement.contentEditable
-  - api.HTMLElement.contentEditable.plaintext-only
   - api.HTMLElement.inputMode
   - api.HTMLElement.isContentEditable
