but wait, there's more

--- a/features/click.yml
+++ b/features/click.yml
@@ -1,5 +1,5 @@
 name: Click
-description: The `focus` and `blur` element APIs put an element in or out of focus.
-spec: https://html.spec.whatwg.org/multipage/interaction.html#dom-focus-dev
+description: The `click` method simulates a mouse click on an element. When called on an element, the element's click event is fired.
+spec: https://html.spec.whatwg.org/multipage/interaction.html#dom-click-dev
 compat_features:
   - api.HTMLElement.click
