--- a/features/csp.yml
+++ b/features/csp.yml
@@ -46,6 +46,7 @@ compat_features:
   - api.WorkerGlobalScope.securitypolicyviolation_event
   - html.elements.iframe.csp
   - html.elements.meta.http-equiv.content-security-policy
+  - html.global_attributes.nonce
   - http.headers.Content-Security-Policy
   - http.headers.Content-Security-Policy-Report-Only
   - http.headers.Content-Security-Policy.base-uri
