--- a/features/accesskey.yml
+++ b/features/accesskey.yml
@@ -1,6 +1,8 @@
 name: AccessKey global attribute
 description: The `accessKey` global attribute and property gives a hint for generating a keyboard shortcut for the current element. The attribute value must consist of a single printable character.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#the-accesskey-attribute
+status:
+  compute_from: api.HTMLElement.accessKey
 compat_features:
   - api.HTMLElement.accessKey
   - api.HTMLElement.accessKeyLabel
