--- a/features/command-event.yml
+++ b/features/command-event.yml
@@ -1,7 +1,5 @@
 name: Command event
-description: The `command` event is fired for `<input>`, `<select>`, and `<textarea>` elements when the user modifies the element's value. Unlike the input event, the change event is not necessarily fired for each alteration to an element's value.
-spec:
-  - https://html.spec.whatwg.org/multipage/indices.html#event-change
-  - https://html.spec.whatwg.org/multipage/webappapis.html#handler-onchange
+description: The `command` event fires on an element that is controlled via a button with valid commandForElement and command values, whenever the button is interacted with (such as being clicked).
+spec: https://html.spec.whatwg.org/multipage/webappapis.html#handler-onchange
 compat_features:
   - api.HTMLElement.command_event
