--- a/features/csp.yml.dist
+++ b/features/csp.yml.dist
@@ -239,6 +239,19 @@ compat_features:
   #   chrome: "61"
   #   chrome_android: "61"
   #   edge: "79"
+  #   firefox: "31"
+  #   firefox_android: "31"
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
+  - html.global_attributes.nonce
+
+  # baseline: high
+  # baseline_low_date: 2022-03-14
+  # baseline_high_date: 2024-09-14
+  # support:
+  #   chrome: "61"
+  #   chrome_android: "61"
+  #   edge: "79"
   #   firefox: "75"
   #   firefox_android: "79"
   #   safari: "15.4"
