--- a/features/enterkeyhint.yml
+++ b/features/enterkeyhint.yml
@@ -1,5 +1,6 @@
-name: Enterkeyhint global attribute
-description: The `enterkeyhint` global attribute defines an action label (or icon) to present for the `enter` key on virtual keyboards.
+name: Enterkeyhint
+description: The `enterkeyhint` global attribute and property defines an action label (or icon) to present for the `enter` key on virtual keyboards.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#input-modalities:-the-enterkeyhint-attribute
 compat_features:
   - api.HTMLElement.enterKeyHint
+  - html.global_attributes.enterkeyhint
