--- a/features/lang-attr.yml
+++ b/features/lang-attr.yml
@@ -1,5 +1,6 @@
-name: Lang global attribute
-description: The `lang` global attribute defines the language of an element.
+name: Lang
+description: The `lang` global attribute and property defines the language of an element.
 spec: https://html.spec.whatwg.org/multipage/dom.html#attr-lang
 compat_features:
   - api.HTMLElement.lang
+  - html.global_attributes.lang
