--- a/features/title-attr.yml
+++ b/features/title-attr.yml
@@ -1,5 +1,6 @@
-name: Title global attribute
-description: The `title` global attribute represents the title of an element, with the attribute value typically displayed in a 'tooltip' popup when the mouse is over the node.
+name: Title
+description: The `title` global attribute and property represents the title of an element, with the attribute value typically displayed in a 'tooltip' popup when the mouse is over the node.
 spec: https://html.spec.whatwg.org/multipage/dom.html#dom-title
 compat_features:
   - api.HTMLElement.title
+  - html.global_attributes.title
