--- a/features/autocapitalize.yml
+++ b/features/autocapitalize.yml
@@ -1,5 +1,5 @@
 name: Autocapitalize
-description: The `autocapitalize` global attribute and property sets the capitalization behavior for user input on an element in different ways, such as capitalizing all characters, or just the first letter of sentences.
+description: The `autocapitalize` global attribute and property sets the capitalization behavior for user input on an element in different ways on virtual keyboards, such as the first letter of sentences or of all words.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#autocapitalization
 compat_features:
   - api.HTMLElement.autocapitalize
