Fix spec arrays that should be strings

--- a/features/weak-references.yml
+++ b/features/weak-references.yml
@@ -1,7 +1,6 @@
 name: Weak references
 description: The `WeakRef` and `FinalizationRegistry` objects hold references to garbage-collectable objects without creating strong references that prevent their garbage collection.
-spec:
-  - https://tc39.es/ecma262/multipage/managing-memory.html#sec-managing-memory
+spec: https://tc39.es/ecma262/multipage/managing-memory.html#sec-managing-memory
 snapshot: ecmascript-2021
 group: javascript
 status:
