--- a/features/wasm-bigint.yml
+++ b/features/wasm-bigint.yml
@@ -1,6 +1,6 @@
 name: BigInt to i64 conversion (WebAssembly)
 description: Integer values pass bidirectionally between JavaScript and WebAssembly, converted to i64 values in WebAssembly or BigInt values in JavaScript.
-spec: https://webassembly.github.io/spec/js-api/#ref-for-syntax-numtype①⓪
+spec: https://webassembly.github.io/spec/js-api/#ref-for-syntax-numtype%E2%91%A0%E2%93%AA
 group: webassembly
 caniuse: wasm-bigint
 compat_features:
