--- a/features/view-transitions.yml.dist
+++ b/features/view-transitions.yml.dist
@@ -4,9 +4,11 @@
 status:
   baseline: false
   support:
-    chrome: "128"
-    chrome_android: "128"
-    edge: "128"
+    chrome: "111"
+    chrome_android: "111"
+    edge: "111"
+    safari: "18"
+    safari_ios: "18"
 compat_features:
   # baseline: false
   # support:
@@ -21,6 +23,7 @@ compat_features:
   - css.selectors.view-transition-new
   - css.selectors.view-transition-old
 
+  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "111"
@@ -62,7 +65,6 @@ compat_features:
   - api.PageRevealEvent.viewTransition
   - api.PageSwapEvent.viewTransition
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "128"
