--- a/features/float16array.yml.dist
+++ b/features/float16array.yml.dist
@@ -6,6 +6,8 @@ status:
   support:
     firefox: "129"
     firefox_android: "129"
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   - javascript.builtins.DataView.getFloat16
   - javascript.builtins.DataView.setFloat16
