--- a/features/nesting.yml.dist
+++ b/features/nesting.yml.dist
@@ -46,5 +46,7 @@ compat_features:
   #   chrome_android: "130"
   #   edge: "130"
   #   firefox: "132"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
   - api.CSSNestedDeclarations
   - api.CSSNestedDeclarations.style
