--- a/features/active-view-transition.yml.dist
+++ b/features/active-view-transition.yml.dist
@@ -17,12 +17,13 @@ compat_features:
   #   safari_ios: "18"
   - css.selectors.active-view-transition
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "125"
   #   chrome_android: "125"
   #   edge: "125"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
   - api.ViewTransition.types
   - api.ViewTransitionTypeSet
   - api.ViewTransitionTypeSet.@@iterator
@@ -35,4 +36,11 @@ compat_features:
   - api.ViewTransitionTypeSet.keys
   - api.ViewTransitionTypeSet.size
   - api.ViewTransitionTypeSet.values
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "125"
+  #   chrome_android: "125"
+  #   edge: "125"
   - css.selectors.active-view-transition-type
