--- a/features/background-clip-border-area.yml.dist
+++ b/features/background-clip-border-area.yml.dist
@@ -3,6 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   - css.properties.background-clip.border-area
