--- a/features/draft/spec/badging.yml.dist
+++ b/features/draft/spec/badging.yml.dist
@@ -9,14 +9,15 @@ status:
 compat_features:
   # baseline: false
   # support:
+  #   chrome: "81"
+  #   edge: "81"
+  #   safari: "17"
+  #   safari_ios: "16.4"
+  - api.Navigator.setAppBadge
+
+  # baseline: false
+  # support:
   #   chrome_android: "81"
   #   safari: "17"
   #   safari_ios: "16.4"
   - api.Navigator.clearAppBadge
-
-  # ⬇️ Same status as overall feature ⬇️
-  # baseline: false
-  # support:
-  #   safari: "17"
-  #   safari_ios: "16.4"
-  - api.Navigator.setAppBadge
