--- a/features/draft/spec/html.yml.dist
+++ b/features/draft/spec/html.yml.dist
@@ -1905,9 +1905,28 @@ compat_features:
   #   chrome: "123"
   #   chrome_android: "123"
   #   edge: "123"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.PageRevealEvent
+
+  # baseline: false
+  # support:
+  #   chrome: "123"
+  #   chrome_android: "123"
+  #   edge: "123"
   #   firefox: "123"
   #   firefox_android: "123"
   - html.elements.template.shadowrootdelegatesfocus
+
+  # baseline: false
+  # support:
+  #   chrome: "124"
+  #   chrome_android: "124"
+  #   edge: "124"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.PageSwapEvent
+  - api.PageSwapEvent.activation
 
   # baseline: false
   # support:
@@ -1920,12 +1939,32 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "126"
+  #   chrome_android: "126"
+  #   edge: "126"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.PageRevealEvent.viewTransition
+  - api.PageSwapEvent.viewTransition
+
+  # baseline: false
+  # support:
   #   chrome: "127"
   #   chrome_android: "127"
   #   edge: "127"
   #   safari: "18"
   #   safari_ios: "18"
   - html.elements.script.type.importmap.integrity
+
+  # baseline: false
+  # support:
+  #   chrome: "128"
+  #   chrome_android: "128"
+  #   edge: "128"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.PageRevealEvent.PageRevealEvent
+  - api.PageSwapEvent.PageSwapEvent
 
   # baseline: false
   # support:
@@ -2149,18 +2188,9 @@ compat_features:
 
   # baseline: false
   # support:
-  #   chrome: "123"
-  #   chrome_android: "123"
-  #   edge: "123"
-  - api.PageRevealEvent
-
-  # baseline: false
-  # support:
   #   chrome: "124"
   #   chrome_android: "124"
   #   edge: "124"
-  - api.PageSwapEvent
-  - api.PageSwapEvent.activation
   - html.elements.link.rel.expect
   - http.headers.Link.expect
 
@@ -2180,17 +2210,7 @@ compat_features:
   #   chrome_android: "126"
   #   edge: "126"
   - api.HTMLImageElement.sizes.auto
-  - api.PageRevealEvent.viewTransition
-  - api.PageSwapEvent.viewTransition
   - html.elements.img.sizes.auto
-
-  # baseline: false
-  # support:
-  #   chrome: "128"
-  #   chrome_android: "128"
-  #   edge: "128"
-  - api.PageRevealEvent.PageRevealEvent
-  - api.PageSwapEvent.PageSwapEvent
 
   # baseline: false
   # support:
