--- a/features/mouse-events.yml.dist
+++ b/features/mouse-events.yml.dist
@@ -190,6 +190,18 @@ compat_features:
   #   safari_ios: "12.2"
   - api.MouseEvent.getModifierState
 
+  # baseline: low
+  # baseline_low_date: 2024-12-11
+  # support:
+  #   chrome: "55"
+  #   chrome_android: "55"
+  #   edge: "79"
+  #   firefox: "53"
+  #   firefox_android: "53"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
+  - api.Element.auxclick_event
+
   # baseline: false
   # support:
   #   chrome: "1"
@@ -199,12 +211,3 @@ compat_features:
   #   firefox_android: "6"
   #   safari: "3"
   - api.Element.contextmenu_event
-
-  # baseline: false
-  # support:
-  #   chrome: "55"
-  #   chrome_android: "55"
-  #   edge: "79"
-  #   firefox: "53"
-  #   firefox_android: "53"
-  - api.Element.auxclick_event
