--- a/features/promise-try.yml.dist
+++ b/features/promise-try.yml.dist
@@ -7,5 +7,7 @@ status:
     chrome: "128"
     chrome_android: "128"
     edge: "128"
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   - javascript.builtins.Promise.try
