--- a/features/regexp-escape.yml.dist
+++ b/features/regexp-escape.yml.dist
@@ -3,6 +3,8 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   - javascript.builtins.RegExp.escape
