--- a/features/ruby-overhang.yml.dist
+++ b/features/ruby-overhang.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   - css.properties.ruby-overhang
   - css.properties.ruby-overhang.auto
