--- a/features/text-box.yml.dist
+++ b/features/text-box.yml.dist
@@ -3,7 +3,9 @@
 
 status:
   baseline: false
-  support: {}
+  support:
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   - css.properties.text-box
   - css.properties.text-box-edge
