--- a/features/text-underline-position.yml.dist
+++ b/features/text-underline-position.yml.dist
@@ -68,21 +68,27 @@ compat_features:
   #   safari_ios: "12.2"
   - css.properties.text-underline-position.from-font
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-12-11
   # support:
   #   chrome: "71"
   #   chrome_android: "71"
   #   edge: "79"
   #   firefox: "74"
   #   firefox_android: "79"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
   - css.properties.text-underline-position.left
   - css.properties.text-underline-position.right
 
-  # baseline: false
+  # baseline: low
+  # baseline_low_date: 2024-12-11
   # support:
   #   chrome: "87"
   #   chrome_android: "87"
   #   edge: "87"
   #   firefox: "74"
   #   firefox_android: "79"
+  #   safari: "18.2"
+  #   safari_ios: "18.2"
   - css.properties.text-underline-offset.percentage
