--- a/features/text-wrap-style.yml.dist
+++ b/features/text-wrap-style.yml.dist
@@ -5,6 +5,7 @@ status:
   baseline: false
   support:
     chrome: "130"
+    chrome_android: "130"
     edge: "130"
 compat_features:
   # baseline: low
@@ -26,5 +27,6 @@ compat_features:
   # baseline: false
   # support:
   #   chrome: "130"
+  #   chrome_android: "130"
   #   edge: "130"
   - css.properties.text-wrap-style.pretty
