--- a/features/uint8array-base64-hex.yml.dist
+++ b/features/uint8array-base64-hex.yml.dist
@@ -6,6 +6,8 @@ status:
   support:
     firefox: "133"
     firefox_android: "133"
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   - javascript.builtins.Uint8Array.fromBase64
   - javascript.builtins.Uint8Array.fromHex
