--- a/features/view-transition-class.yml.dist
+++ b/features/view-transition-class.yml.dist
@@ -7,6 +7,8 @@ status:
     chrome: "125"
     chrome_android: "125"
     edge: "125"
+    safari: "18.2"
+    safari_ios: "18.2"
 compat_features:
   - css.properties.view-transition-class
   - css.properties.view-transition-class.none
