--- a/features/link-rel-dns-prefetch.yml
+++ b/features/link-rel-dns-prefetch.yml
@@ -1,5 +1,5 @@
 name: '<link rel="dns-prefetch">'
-description: The `rel="dns-prefetch"` attribute for the `<link>` HTML element is a hint that the user is likely to need resources from the target resource's origin, so the browser should preemptively perform DNS resolution for that origin.
+description: The `rel="dns-prefetch"` attribute for the `<link>` HTML element is a hint to the browser that the page or user is likely to request resources from another domain, so the browser should preemptively resolve DNS for the `href` value's domain.
 spec: https://html.spec.whatwg.org/multipage/links.html#link-type-dns-prefetch
 caniuse: link-rel-dns-prefetch
 compat_features:
