--- a/features/link-rel-prefetch.yml
+++ b/features/link-rel-prefetch.yml
@@ -1,5 +1,5 @@
 name: '<link rel="prefetch">'
-description: The `rel="prefetch"` attribute for the `<link>` HTML element hints to browsers that the user is likely to need the target resource for future navigations, so the browser should preemptively fetch and cache the resource.
+description: The `rel="prefetch"` attribute for the `<link>` HTML element is a hint to the browser that the user is likely to navigate to a resource, so the browser should preemptively fetch and cache the resource.
 spec: https://html.spec.whatwg.org/multipage/links.html#link-type-prefetch
 caniuse: link-rel-prefetch
 compat_features:
