--- a/features/link-rel-prefetch.yml.dist
+++ b/features/link-rel-prefetch.yml.dist
@@ -3,11 +3,35 @@
 
 status:
   baseline: false
-  support:
-    chrome: "8"
-    chrome_android: "18"
-    edge: "12"
-    firefox: "2"
-    firefox_android: "4"
+  support: {}
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "8"
+  #   chrome_android: "18"
+  #   edge: "12"
+  #   firefox: "2"
+  #   firefox_android: "4"
   - html.elements.link.rel.prefetch
+
+  # baseline: false
+  # support:
+  #   chrome: "110"
+  #   chrome_android: "110"
+  #   edge: "110"
+  #   firefox: "115"
+  #   firefox_android: "115"
+  - http.headers.Sec-Purpose
+
+  # baseline: false
+  # support:
+  #   chrome: "117"
+  #   chrome_android: "117"
+  #   edge: "117"
+  - api.PerformanceResourceTiming.deliveryType.navigational-prefetch
+
+  # baseline: false
+  # support:
+  #   firefox: "115"
+  #   firefox_android: "115"
+  - http.headers.Sec-Purpose.prefetch
