--- a/features/notifications-apps.yml
+++ b/features/notifications-apps.yml
@@ -4,7 +4,7 @@ name: Notifications from service workers and installed apps
 #
 # See `features/notifications.yml` for the full Notifications feature, which
 # does not align with Caniuse.
-description: The Notifications API, when used from a service worker for Chrome Android or home screen app for Safari iOS, displays messages to the user, typically using the notification system of the host operating system.
+description: Notifications via service worker registration's `showNotification()` method, sent from installed web applications (for example, saved to the Home Screen on Safari for iOS), show a message to the user, typically using the notification system of the host operating system.
 spec: https://notifications.spec.whatwg.org/
 caniuse: notifications
 status:
