--- a/features/notifications.yml
+++ b/features/notifications.yml
@@ -4,7 +4,7 @@ name: Notifications
 #
 # See `features/notifications-apps.yml` for the Notifications feature for mobile
 # browsers that have platform-specific requirements and aligns with Caniuse.
-description: The Notifications API displays messages to the user, typically using the notification system of the host operating system.
+description: The `Notification()` constructor shows a message to the user, typically using the notification system of the host operating system.
 spec: https://notifications.spec.whatwg.org/
 status:
   compute_from: api.Notification.Notification
