--- a/features/notifications-apps.yml
+++ b/features/notifications-apps.yml
@@ -9,11 +9,12 @@ spec: https://notifications.spec.whatwg.org/
 caniuse: notifications
 status:
   baseline: low
+  baseline_low_date: 2023-03-27
   support:
-    chrome: 20
-    chrome_android: 42
-    edge: 14
-    firefox: 22
-    firefox_android: 22
-    safari: 7
-    safari_ios: 16.4
+    chrome: "20"
+    chrome_android: "42"
+    edge: "14"
+    firefox: "22"
+    firefox_android: "22"
+    safari: "7"
+    safari_ios: "16.4"
