--- a/features/gpc.yml
+++ b/features/gpc.yml
@@ -1,5 +1,5 @@
 name: Global privacy control
-description: The `Sec-GPC` request header indicates whether the user consents to a website or service selling or sharing their personal information with third parties.
+description: The `Sec-GPC` request header indicates that the user does not consent to a website or service selling or sharing their personal information with third parties.
 spec: https://w3c.github.io/gpc/
 compat_features:
   - api.Navigator.globalPrivacyControl
