--- a/features/badging.yml
+++ b/features/badging.yml
@@ -1,5 +1,5 @@
 name: Badging
-description: The `navigator.setAppBadge()` method allows installed web applications to display an application badge, which is usually shown alongside the application's icon on the device's home screen or application dock.
+description: The `navigator.setAppBadge()` method allows installed web applications to display an application badge, typically a dot or number shown alongside the application's icon on the device's home screen or application dock.
 spec: https://w3c.github.io/badging/
 compat_features:
   - api.Navigator.clearAppBadge
