--- a/features/dom-geometry.yml
+++ b/features/dom-geometry.yml
@@ -1,4 +1,4 @@
-name: Geometric shapes
+name: DOM Geometry
 description: The `DOMMatrix`, `DOMPoint`, `DOMQuad` and `DOMRect` interfaces offer a way to represent points, rectangles, quadrilaterals and transformation matrices within JavaScript. They can be used in transformations in CSS, `<canvas>`, and SVG.
 spec: https://drafts.fxtf.org/geometry-1/
 status:
