--- a/features/link-rel-preload.yml
+++ b/features/link-rel-preload.yml
@@ -1,5 +1,5 @@
 name: '<link rel="preload">'
-description: The `rel="preload"` attribute for the `<link>` HTML element lets you declare fetch requests in the HTML's `<head>, specifying resources such as images or style sheets that your page will need very soon, which you want to the browser to start loading before main rendering begins.
+description: The `rel="preload"` attribute for the `<link>` HTML element lets you declare fetch requests in the HTML's `<head> for resources such as images or style sheets that your page will need very soon, so the browser can queue them at a high priority for loading before main rendering begins.
 spec: https://html.spec.whatwg.org/multipage/links.html#link-type-preload
 caniuse: link-rel-preload
 status:
