--- a/features/enterkeyhint.yml
+++ b/features/enterkeyhint.yml
@@ -1,5 +1,5 @@
 name: Enterkeyhint
-description: The `enterkeyhint` global attribute and property defines an action label (or icon) to present for the `enter` key on virtual keyboards.
+description: The `enterkeyhint` global attribute defines an action label (or icon) to present for the `enter` key on virtual keyboards.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#input-modalities:-the-enterkeyhint-attribute
 compat_features:
   - api.HTMLElement.enterKeyHint
