--- a/features/focus-apis.yml
+++ b/features/focus-apis.yml
@@ -1,5 +1,5 @@
 name: Focus and blur
-description: The `focus` and `blur` element APIs put an element in or out of focus.
+description: An element's `focus()` and `blur()` methods put the element in or out of focus.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#dom-focus-dev
 status:
   compute_from:
