--- a/features/lang-attr.yml
+++ b/features/lang-attr.yml
@@ -1,5 +1,5 @@
 name: Lang
-description: The `lang` global attribute and property defines the language of an element.
+description: The `lang` global attribute defines the language of an element, for the purpose of assistive technology to correctly read the content.
 spec: https://html.spec.whatwg.org/multipage/dom.html#attr-lang
 compat_features:
   - api.HTMLElement.lang
