--- a/features/webvtt-cue-settings.yml
+++ b/features/webvtt-cue-settings.yml
@@ -13,6 +13,7 @@ compat_features:
   - api.VTTCue.align
   - api.VTTCue.line
   - api.VTTCue.position
+  - api.VTTCue.region
   - api.VTTCue.size
   - api.VTTCue.snapToLines
   - api.VTTCue.vertical
