--- a/features/webvtt-regions.yml
+++ b/features/webvtt-regions.yml
@@ -1,3 +1,14 @@
 name: WebVTT regions
 description: WebVTT regions set the areas of the video where captions or subtitles should be rendered, such as placing roll-up captions used for live captions.
 spec: https://w3c.github.io/webvtt/#regions
+compat_features:
+  - api.VTTRegion
+  - api.VTTRegion.VTTRegion
+  - api.VTTRegion.id
+  - api.VTTRegion.lines
+  - api.VTTRegion.regionAnchorX
+  - api.VTTRegion.regionAnchorY
+  - api.VTTRegion.scroll
+  - api.VTTRegion.viewportAnchorX
+  - api.VTTRegion.viewportAnchorY
+  - api.VTTRegion.width
