fenced frame, permission request

--- a/features/fencedframe.yml
+++ b/features/fencedframe.yml
@@ -13,6 +13,7 @@ compat_features:
   - api.HTMLFencedFrameElement.allow
   - api.HTMLFencedFrameElement.config
   - api.HTMLFencedFrameElement.height
+  - api.HTMLFencedFrameElement.sandbox
   - api.HTMLFencedFrameElement.width
   - api.Navigator.deprecatedReplaceInURN
   - api.Window.fence
