--- a/features/permissions.yml.dist
+++ b/features/permissions.yml.dist
@@ -40,3 +40,7 @@ compat_features:
   #   safari: "16"
   #   safari_ios: "16"
   - api.PermissionStatus.state
+
+  # baseline: false
+  # support: {}
+  - api.Permissions.request
