--- a/features/fencedframe.yml.dist
+++ b/features/fencedframe.yml.dist
@@ -23,6 +23,7 @@ compat_features:
   - api.HTMLFencedFrameElement.allow
   - api.HTMLFencedFrameElement.config
   - api.HTMLFencedFrameElement.height
+  - api.HTMLFencedFrameElement.sandbox
   - api.HTMLFencedFrameElement.width
   - api.Navigator.deprecatedReplaceInURN
   - api.Window.fence
