--- a/features/autocapitalize.yml
+++ b/features/autocapitalize.yml
@@ -1,5 +1,5 @@
 name: Autocapitalize
-description: The `autocapitalize` global attribute sets the capitalization behavior for user input on an element in different ways on virtual keyboards, such as the first letter of sentences or of all words.
+description: The `autocapitalize` global HTML attribute sets the virtual keyboard capitalization behavior for user input on an element, such as the first letter of sentences or all words.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#autocapitalization
 compat_features:
   - api.HTMLElement.autocapitalize
