--- a/features/change-event.yml
+++ b/features/change-event.yml
@@ -1,5 +1,5 @@
 name: Change event
-description: The `change` event is fired for `<input>`, `<select>`, and `<textarea>` elements when the user modifies the element's value. Unlike the input event, the change event is not necessarily fired for each alteration to an element's value.
+description: The `change` event for `<input>`, `<select>`, and `<textarea>` elements fires when the user modifies the element's value. Unlike the `input` event, the change event does not necessarily fire on every alteration to an element's value.
 spec:
   - https://html.spec.whatwg.org/multipage/indices.html#event-change
   - https://html.spec.whatwg.org/multipage/webappapis.html#handler-onchange
