--- a/features/contenteditable-plaintextonly.yml
+++ b/features/contenteditable-plaintextonly.yml
@@ -1,5 +1,5 @@
 name: Contenteditable plaintext-only
-description: The `contenteditable` attribute with a value of `plaintext-only` makes an element's raw text editable, but disables rich text formatting on it.
+description: The `contenteditable="plaintext-only"` global HTML attribute allows the user to edit the content of an element, but prevents rich-text formatting.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#attr-contenteditable-plaintextonly-state
 compat_features:
   - html.global_attributes.contenteditable.plaintext-only
