--- a/features/spellcheck.yml
+++ b/features/spellcheck.yml
@@ -1,5 +1,5 @@
 name: Spellcheck
-description: The `spellcheck` global attribute defines whether an element may be checked for spelling errors by the browser.
+description: The `spellcheck` global HTML attribute sets whether the browser may check an element for spelling errors.
 spec: https://html.spec.whatwg.org/multipage/interaction.html#the-accesskey-attribute
 compat_features:
   - api.HTMLElement.spellcheck
