--- a/features/focus-events.yml
+++ b/features/focus-events.yml
@@ -17,3 +17,7 @@ compat_features:
   - api.FocusEvent
   - api.FocusEvent.FocusEvent
   - api.FocusEvent.relatedTarget
+  - api.HTMLElement.blur
+  - api.HTMLElement.focus
+  - api.HTMLElement.focus.options_focusVisible_parameter
+  - api.HTMLElement.focus.options_preventScroll_parameter
