--- a/features/contenteditable-plaintextonly.yml.dist
+++ b/features/contenteditable-plaintextonly.yml.dist
@@ -7,7 +7,24 @@ status:
     chrome: "51"
     chrome_android: "51"
     edge: ≤79
-    safari: "5.1"
-    safari_ios: "5"
+    safari: ≤13.1
+    safari_ios: ≤13.4
 compat_features:
+  # baseline: false
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: ≤79
+  #   safari: "5.1"
+  #   safari_ios: "5"
   - api.HTMLElement.contentEditable.plaintext-only
+
+  # ⬇️ Same status as overall feature ⬇️
+  # baseline: false
+  # support:
+  #   chrome: "51"
+  #   chrome_android: "51"
+  #   edge: ≤79
+  #   safari: ≤13.1
+  #   safari_ios: ≤13.4
+  - html.global_attributes.contenteditable.plaintext-only
