--- a/features/contenteditable.yml.dist
+++ b/features/contenteditable.yml.dist
@@ -34,6 +34,19 @@ compat_features:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "12"
+  #   firefox: "3"
+  #   firefox_android: "4"
+  #   safari: ≤4
+  #   safari_ios: ≤3.2
+  - html.global_attributes.contenteditable
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
   #   firefox: "4"
   #   firefox_android: "4"
   #   safari: "3"
