--- a/features/focus-events.yml.dist
+++ b/features/focus-events.yml.dist
@@ -21,6 +21,20 @@ compat_features:
   #   chrome: "1"
   #   chrome_android: "18"
   #   edge: "12"
+  #   firefox: "1.5"
+  #   firefox_android: "4"
+  #   safari: "3"
+  #   safari_ios: "1"
+  - api.HTMLElement.blur
+  - api.HTMLElement.focus
+
+  # baseline: high
+  # baseline_low_date: 2015-07-29
+  # baseline_high_date: 2018-01-29
+  # support:
+  #   chrome: "1"
+  #   chrome_android: "18"
+  #   edge: "12"
   #   firefox: "6"
   #   firefox_android: "6"
   #   safari: "3.1"
@@ -58,7 +72,22 @@ compat_features:
 
   # baseline: false
   # support:
+  #   chrome: "64"
+  #   edge: "17"
+  #   firefox: "68"
+  #   safari: "15"
+  #   safari_ios: "15.5"
+  - api.HTMLElement.focus.options_preventScroll_parameter
+
+  # baseline: false
+  # support:
   #   safari: "5"
   #   safari_ios: "4.2"
   - api.Element.focusin_event
   - api.Element.focusout_event
+
+  # baseline: false
+  # support:
+  #   firefox: "104"
+  #   firefox_android: "104"
+  - api.HTMLElement.focus.options_focusVisible_parameter
