Add private clicks keys

--- a/features/attribution-reporting.yml.dist
+++ b/features/attribution-reporting.yml.dist
@@ -3,10 +3,7 @@
 
 status:
   baseline: false
-  support:
-    chrome: "125"
-    chrome_android: "125"
-    edge: "125"
+  support: {}
 compat_features:
   # baseline: false
   # support:
@@ -20,7 +17,6 @@ compat_features:
   - http.headers.Attribution-Reporting-Support
   - http.headers.Permissions-Policy.attribution-reporting
 
-  # ⬇️ Same status as overall feature ⬇️
   # baseline: false
   # support:
   #   chrome: "125"
@@ -35,3 +31,15 @@ compat_features:
   - html.elements.a.attributionsrc
   - html.elements.img.attributionsrc
   - html.elements.script.attributionsrc
+
+  # baseline: false
+  # support:
+  #   safari: "14.1"
+  #   safari_ios: "14.5"
+  - html.elements.a.attributionsourceid
+
+  # baseline: false
+  # support:
+  #   safari: "15.4"
+  #   safari_ios: "15.4"
+  - api.HTMLAnchorElement.attributionSourceId
