--- a/features/attribution-reporting.yml
+++ b/features/attribution-reporting.yml
@@ -1,13 +1,19 @@
 name: Attribution reporting
 description: The Attribution Reporting API measures when an ad click or view leads to a conversion, such as a purchase on an advertiser site.
-spec: https://wicg.github.io/attribution-reporting-api/
+spec:
+  - https://wicg.github.io/attribution-reporting-api/
+  - https://privacycg.github.io/private-click-measurement/
+status:
+  compute_from: api.HTMLAnchorElement.attributionSrc
 compat_features:
+  - api.HTMLAnchorElement.attributionSourceId
   - api.HTMLAnchorElement.attributionSrc
   - api.HTMLImageElement.attributionSrc
   - api.HTMLScriptElement.attributionSrc
   - api.Request.Request.init_attributionReporting_parameter
   - api.XMLHttpRequest.setAttributionReporting
   - api.fetch.init_attributionReporting_parameter
+  - html.elements.a.attributionsourceid
   - html.elements.a.attributionsrc
   - html.elements.iframe.allow.attribution-reporting
   - html.elements.img.attributionsrc
