--- a/features/webvtt-regions.yml
+++ b/features/webvtt-regions.yml
@@ -2,6 +2,7 @@ name: WebVTT regions
 description: WebVTT regions set the areas of the video where captions or subtitles should be rendered, such as placing roll-up captions used for live captions.
 spec: https://w3c.github.io/webvtt/#regions
 compat_features:
+  - api.VTTCue.region
   - api.VTTRegion
   - api.VTTRegion.VTTRegion
   - api.VTTRegion.id
